Fixed list spacing

--- a/scss/01-base/03-lists.scss
+++ b/scss/01-base/03-lists.scss
@@ -11,10 +11,10 @@ dd {
 
 ul,
 ol {
-  margin: 0 0 0 2em;
+  margin-inline-start: 2em;
   padding: 0;
 }
 
 li {
-  line-height: 2;
+  margin-block: .65em;
 }
